fixes close btn on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,8 @@ header {
   right: 40px;
   width: 24px;
   height: 24px;
-  display: inline-flex;
+  padding: 0;
+  display: flex;
   align-items: center;
   justify-content: center;
   background-color: var(--accent-color);
@@ -145,11 +146,13 @@ header {
   height: 100vh;
   background-color: var(--white-background-color);
   transform: translateX(100%);
-  transition: transform var(--transition);
+  visibility: hidden;
+  transition: transform var(--transition), visibility var(--transition);
 }
 .menu-container.is-open {
   display: flex;
   flex-direction: column;
+  visibility: visible;
   transform: translateX(0);
 }
 
@@ -530,6 +533,7 @@ header {
   right: 24px;
   width: 24px;
   height: 24px;
+  padding: 0;
   display: inline-flex;
   align-items: center;
   justify-content: center;
