--- a/sass/_modal-window.scss
+++ b/sass/_modal-window.scss
@@ -202,6 +202,7 @@
 
   width: 24px;
   height: 24px;
+  padding: 0;
   display: inline-flex;
   align-items: center;
   justify-content: center;
